# serializer version: 1
# name: test_timedelta_components[session-tracked-async-days-aiosqlite_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE CAST(strftime(?, interval_model.time_delta_col) AS INTEGER) / (? + 0.0) = ?
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-days-asyncmy_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE unix_timestamp(interval_model.time_delta_col) / %s = %s
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-days-asyncpg_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE EXTRACT(EPOCH FROM interval_model.time_delta_col) / CAST($1::INTEGER AS NUMERIC) = $2::NUMERIC
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-days-psycopg_async_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE EXTRACT(EPOCH FROM interval_model.time_delta_col) / CAST(%(param_1)s::INTEGER AS NUMERIC) = %(param_2)s
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-hours-aiosqlite_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE CAST(strftime(?, interval_model.time_delta_col) AS INTEGER) / (? + 0.0) = ?
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-hours-asyncmy_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE unix_timestamp(interval_model.time_delta_col) / %s = %s
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-hours-asyncpg_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE EXTRACT(EPOCH FROM interval_model.time_delta_col) / CAST($1::INTEGER AS NUMERIC) = $2::NUMERIC
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-hours-psycopg_async_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE EXTRACT(EPOCH FROM interval_model.time_delta_col) / CAST(%(param_1)s::INTEGER AS NUMERIC) = %(param_2)s
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-minutes-aiosqlite_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE CAST(strftime(?, interval_model.time_delta_col) AS INTEGER) / (? + 0.0) = ?
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-minutes-asyncmy_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE unix_timestamp(interval_model.time_delta_col) / %s = %s
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-minutes-asyncpg_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE EXTRACT(EPOCH FROM interval_model.time_delta_col) / CAST($1::INTEGER AS NUMERIC) = $2::NUMERIC
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-minutes-psycopg_async_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE EXTRACT(EPOCH FROM interval_model.time_delta_col) / CAST(%(param_1)s::INTEGER AS NUMERIC) = %(param_2)s
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-totalSeconds-aiosqlite_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE CAST(strftime(?, interval_model.time_delta_col) AS INTEGER) = ?
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-totalSeconds-asyncmy_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE unix_timestamp(interval_model.time_delta_col) = %s
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-totalSeconds-asyncpg_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE EXTRACT(EPOCH FROM interval_model.time_delta_col) = $1::FLOAT
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-async-totalSeconds-psycopg_async_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE EXTRACT(EPOCH FROM interval_model.time_delta_col) = %(param_1)s
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-sync-days-psycopg_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE EXTRACT(EPOCH FROM interval_model.time_delta_col) / CAST(%(param_1)s::INTEGER AS NUMERIC) = %(param_2)s
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-sync-days-sqlite_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE CAST(strftime(?, interval_model.time_delta_col) AS INTEGER) / (? + 0.0) = ?
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-sync-hours-psycopg_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE EXTRACT(EPOCH FROM interval_model.time_delta_col) / CAST(%(param_1)s::INTEGER AS NUMERIC) = %(param_2)s
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-sync-hours-sqlite_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE CAST(strftime(?, interval_model.time_delta_col) AS INTEGER) / (? + 0.0) = ?
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-sync-minutes-psycopg_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE EXTRACT(EPOCH FROM interval_model.time_delta_col) / CAST(%(param_1)s::INTEGER AS NUMERIC) = %(param_2)s
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-sync-minutes-sqlite_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE CAST(strftime(?, interval_model.time_delta_col) AS INTEGER) / (? + 0.0) = ?
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-sync-totalSeconds-psycopg_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE EXTRACT(EPOCH FROM interval_model.time_delta_col) = %(param_1)s
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_components[session-tracked-sync-totalSeconds-sqlite_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   WHERE CAST(strftime(?, interval_model.time_delta_col) AS INTEGER) = ?
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_output[session-tracked-async-aiosqlite_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_output[session-tracked-async-asyncmy_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_output[session-tracked-async-asyncpg_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_output[session-tracked-async-psycopg_async_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_output[session-tracked-sync-psycopg_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   ORDER BY interval_model.id ASC
  '''
# ---
# name: test_timedelta_output[session-tracked-sync-sqlite_engine]
  '''
  SELECT interval_model.time_delta_col,
         interval_model.id
    FROM interval_model AS interval_model
   ORDER BY interval_model.id ASC
  '''
# ---
